hphp/test/slow/enum-invalid-base/vec.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/vec.php on line 3
